<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".Register.RegisterActivity">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/text_color"
        android:textSize="36dp"
        app:autoSizeMaxTextSize="40dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle"
        android:drawableLeft="@drawable/ic_action_userv2"
        android:drawablePadding="8dp"
        android:inputType="textPersonName"
        android:background="@drawable/bg_edit_text"
        android:textColor="@color/text_color"
        android:hint="@string/username_title"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        android:drawableLeft="@drawable/ic_action_unlockv2"
        android:drawablePadding="8dp"
        android:background="@drawable/bg_edit_text"
        android:textColor="@color/text_color"
        android:hint="@string/password_title"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:drawableLeft="@drawable/ic_action_lockv2"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:background="@drawable/bg_edit_text"
        android:textColor="@color/text_color"
        android:hint="@string/confirm_password_title"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="@color/button_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tvRegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_button"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="24dp"
                android:textColor="@color/text_color"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>