<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="8dp"
    android:background="@color/main_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/list"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRank"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_number"
                android:fontFamily="@font/lin_libertine_ri"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/main_background"
                android:textSize="48sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/lin_libertine_ri"
                    android:text="@string/username_title"
                    android:textColor="@color/text_color"
                    android:textSize="28sp"
                    app:autoSizeMaxTextSize="28sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/lin_libertine_ri"
                    android:text="@string/name_title"
                    android:textColor="@color/text_color"
                    android:textSize="28sp"
                    app:autoSizeMaxTextSize="28sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/lin_libertine_ri"
                android:text="@string/score_title"
                android:textColor="@color/text_color"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>